--- a/application/frontend/mod.css
+++ b/application/frontend/mod.css
@@ -1,7 +1,27 @@
+body {min-width: 790px;}
+
+.alert {
+    position: relative;
+    padding: .5rem 1.25rem;
+    margin-bottom: 1rem;
+    border: none;
+    border-radius: .25rem;
+    font-size: .8rem;
+    margin-top: 1rem;
+}
 .container-fluid {
     margin-top: 10px;
 	margin-bottom:10px;
 }
+
+form#form_resume h5 {
+    display: block;
+    width: 100%;
+    background: #eaeaea;
+    /* line-height: 2em; */
+    padding: 10px;
+}
+
 .col.col-sm-8.text-center {
     color: #375641!important;
 }
@@ -11,10 +31,9 @@ a {
     
 }
 .row {
-width: 80%;
 margin: auto;
 	}
-.col {display: table-column;}
+
 .col h4 {
     font-size: 1.1rem; 
     display: flex;
@@ -54,4 +73,62 @@ font-size: 1rem;
     font-weight: 400;
     margin: 30px 0;
     color: #1970a0;
+}
+
+.text-muted {
+    color: #797d82!important;
+    font-size: .7rem;
+}
+
+div#sex_div {
+    display: inline-flex;
+    width: 50%;
+}
+
+.flex_row {
+    display: inline-flex;
+    width: 50%;
+	position: relative;
+}
+
+div#citizenship_div {
+    display: inline-flex;
+    width: 50%;
+}
+
+.form-check {
+    /* position: relative; */
+    display: inline-flex;
+    padding-left: 1.25rem;
+    float: right;
+    width: 50%;
+}
+
+
+div#birth_dt_div {
+    display: inline-flex;
+    width: 100%;
+}
+
+label.radio-inline {
+display: inline-flex;}
+
+label.font-weight-bold {
+    font-weight: 700!important;
+    text-align: right;
+}
+
+label {
+    margin-bottom: .5rem;
+    font-size: .7rem;
+	min-width: 6rem;
+}
+
+.alert {
+    position: relative;
+    padding: .5rem 1.25rem;
+    margin-bottom: 1rem;
+    border: none;
+    border-radius: .25rem;
+    font-size: .8rem;
 }
