--- a/application/frontend/mod.css
+++ b/application/frontend/mod.css
@@ -1,4 +1,48 @@
-body {min-width: 790px;}
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
+body {
+font-family: 'Roboto', sans-serif;
+
+
+
+
+}
+
+
+.btn:not(:disabled):not(.disabled) {
+margin-right: 20px;
+}
+
+nav.navbar.navbar-expand-md.bg-primary.navbar-dark.sticky-top {
+    background-image: url(/images/logo.svg);
+    background-repeat: no-repeat;
+    background-position: 99%, 100%;
+    background-size: 70px;
+	/*margin-bottom: -3rem;*/
+}
+}
+
+
+div#mainNavbar {
+	
+    
+	
+}
+
+.form-group {
+ margin-bottom: 0!important;
+}
+
+.bg-light {
+    background-color: transparent!important;
+}
+
+.col {
+    -ms-flex-preferred-size: 0;
+flex-basis: unset;}
+
 
 .alert {
     position: relative;
@@ -11,28 +55,36 @@ body {min-width: 790px;}
 }
 .container-fluid {
     margin-top: 10px;
-	margin-bottom:10px;
+    margin-bottom: 10px;
+    
+}
+
+.col.text-right img {
+    display: none;
 }
 
 form#form_resume h5 {
     display: block;
     width: 100%;
-    background: #eaeaea;
+    background: #a6dcfd;
     /* line-height: 2em; */
     padding: 10px;
+	
 }
 
 .col.col-sm-8.text-center {
-    color: #375641!important;
+    color: #57646b!important;
+    margin: auto;
 }
-
 a {
     color: #448cbf;
     
 }
 .row {
-margin: auto;
-	}
+    margin: auto;
+    display: inline-flex!important;
+    width: 100%!important;
+}
 
 .col h4 {
     font-size: 1.1rem; 
@@ -45,13 +97,11 @@ margin: auto;
 button, html [type=button] {
     -webkit-appearance: button;
     display: table-cell;
-    height: 100%;
-    float: left;
     margin-right: 5px;
 }
 .h3, h3 {
-    font-size: 1.75rem;
-    color: #88632c;
+    font-size: 1.35rem;
+    color: #57646b;
 }
 .h5, h5 {
 font-size: 1rem;
@@ -61,8 +111,9 @@ font-size: 1rem;
 }
 
 .footer {
-    background: #efefef;
+    background: #e2e2e2;
     font-weight: 300;
+    font-size: .7rem;
 }
 .col-sm-5 {
     min-width: min-content;
@@ -80,48 +131,71 @@ font-size: 1rem;
     font-size: .7rem;
 }
 
-div#sex_div {
+div#sex_div, div#birth_dt_div {
     display: inline-flex;
-    width: 50%;
+    width: 16.7%!important;
+}
+
+div#birth_place_div {
+	width: 66.6%!important;
+	display: inline-flex;
+	
+}
+
+div#email_div {
+display: inline-flex;
+	width: 31%!important;	
+}
+
+div#phone_mobile_div, div#phone_home_div, div#phone_add_div {
+	display: inline-flex;
+	width: 23%!important;
 }
 
 .flex_row {
+    display: inline;
+    position: relative;
+	width: 100%;
+}
+
+div#name_last_div, div#name_first_div, div#name_middle_div {
+    width: 33.333%!important;
     display: inline-flex;
-    width: 50%;
-	position: relative;
 }
 
 div#citizenship_div {
     display: inline-flex;
-    width: 50%;
+    width: 100%;
 }
 
 .form-check {
     /* position: relative; */
     display: inline-flex;
     padding-left: 1.25rem;
-    float: right;
     width: 50%;
+	font-size: .7rem;
 }
 
 
-div#birth_dt_div {
-    display: inline-flex;
-    width: 100%;
-}
+
 
 label.radio-inline {
-display: inline-flex;}
+
+    background: #f3f3f3;
+    border-radius: 3px;
+    border: solid 1px #ccc;
+    margin: 1px;
+	}
 
 label.font-weight-bold {
     font-weight: 700!important;
     text-align: right;
+	font-size: smaller;
 }
 
 label {
-    margin-bottom: .5rem;
-    font-size: .7rem;
-	min-width: 6rem;
+    font-weight: 700!important;
+    
 }
 
 .alert {
@@ -131,4 +205,148 @@ label {
     border: none;
     border-radius: .25rem;
     font-size: .8rem;
+}
+
+.form-control {
+background-color: #f3f3f3;
+margin-bottom: 10px;
+}
+
+
+.btn-info {
+    color: #fff;
+    background-color: #0581cb;
+    border-color: #0581cb;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #0581cb;
+    border-color: #0581cb;
+}
+
+.alert {display: none;}
+
+
+
+button#btn_lang_add, button#btn_lang_remove {
+    float: none;
+    width: 33.333%!important;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+	margin-bottom: 1rem;
+}
+
+/*PASS*/
+div#series_div, div#numb_div, div#dt_issue_div {
+display: inline-flex;
+    width: 33.333%!important;
+}
+
+div#unit_name_div {
+	display: inline-flex;
+    width: 66.6%!important;
+}
+div#unit_code_div {
+	display: inline-flex;
+    width: 33.4%!important;
+}
+
+/**RLADR**/
+
+div#region_reg_div, div#area_reg_div, div#city_reg_div, div#location_reg_div, div#street_reg_div{
+    display: inline-flex;
+    width: 33%!important;
+} 
+
+div#house_reg_div {
+    width: 33%!important;
+    display: inline-flex;
+}
+
+div#building_reg_div, div#flat_reg_div, div#postcode_reg_div {
+    display: inline-flex;
+    width: 33%!important;
+}
+/*res*/
+
+div#region_res_div, div#area_res_div, div#city_res_div, div#location_res_div, div#street_res_div, div#house_res_div, div#building_res_div, div#flat_res_div, div#postcode_res_div {
+    display: inline-flex;
+    width: 33.333%!important;
+}
+
+.col.col-sm-3 {
+    display: inline-flex;
+    }
+
+
+.btn-warning, .btn-success, .btn-info, .btn-danger, .btn-primary {
+	color: #fff;
+    background-color: #0581cb;
+    border-color: #0581cb;
+}  
+.btn-warning:hover, .btn-success:hover, .btn-info:hover, .btn-danger:hover, .btn-primary:hover {
+background-color: #05629a;
+    border-color: #0581cb;
+color: #fff;	
+}
+
+.btn-warning:active, .btn-success:active, .btn-info:active, .btn-danger:active, .btn-primary:active {
+background-color: #05629a;
+    border-color: #0581cb;
+color: #fff;	
+}
+
+.btn-warning:not(:disabled):not(.disabled).active, .btn-warning:not(:disabled):not(.disabled):active, .show>.btn-warning.dropdown-toggle, .btn-success:not(:disabled):not(.disabled).active, .btn-success:not(:disabled):not(.disabled):active, .show>.btn-success.dropdown-toggle, .btn-info:not(:disabled):not(.disabled).active, .btn-info:not(:disabled):not(.disabled):active, .show>.btn-info.dropdown-toggle, .btn-danger:not(:disabled):not(.disabled).active, .btn-danger:not(:disabled):not(.disabled):active, .show>.btn-danger.dropdown-toggle, .btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle {
+    color: #fff;
+    background-color: #3c8dbd;
+    border-color: #3c8dbd;
+	box-shadow: 0 0 0 0.2rem rgb(5 129 203 / 79%)!important;
+} 
+
+
+
+p.font-weight-bold.font-italic {
+    font-size: .8rem;
+    line-height: .8rem;
+}
+
+
+/*scans*/
+
+div#passport_face_div label,  {
+    display: inline-flex;
+    width: 30%;
+}
+
+table .thead-dark th {
+    color: #544f4f!important;
+    background-color: #d2d2d2!important;
+    border-color: #d2d2d2!important;
+}
+
+h2 {
+	display: block;
+    width: 100%;
+    max-width: 100%;
+    padding: 0;
+    margin-bottom: .5rem;
+    font-size: 1.5rem;
+    line-height: inherit;
+    color: inherit;
+    white-space: normal;
+}
+
+
+.page_name {
+    display: block;
+    min-width: 100%;
+}
+
+.table {
+    width: 100%;
+    max-width: 100%;
+    margin-bottom: 1rem;
+    background-color: transparent;
+    margin-top: 1rem;
 }
