--- a/application/frontend/mod.css
+++ b/application/frontend/mod.css
@@ -1,15 +1,30 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-
 body {
 font-family: 'Roboto', sans-serif;
+font-size: larger;
 color: #44494e;
 }
 
-.text-danger {
-    color: #0581cb!important;
+
+.pl-5, .px-5 {
+   padding-left: 0!important; 0
 }
+.pr-5, .px-5 {
+   padding-right: 0!important;
+}
+
+.h4, h4 {
+    font-size: 1.1rem;
+    padding-left: .666rem;
+}
+
+p.text-danger {
+    /*color: #dc3545!important;*/
+    font-size: .8rem;
+	margin: .5rem;
+ }
 
 td svg {
     color: #0581cb;
@@ -24,9 +39,9 @@ nav.navbar.navbar-expand-md.bg-primary.navbar-dark.sticky-top {
     background-repeat: no-repeat;
     background-position: 99%, 100%;
     background-size: 70px;
+	min-height: 71px;
 	/*margin-bottom: -3rem;*/
 }
-
 
 .alert-info {
     color: #0581cb;
@@ -35,8 +50,8 @@ nav.navbar.navbar-expand-md.bg-primary.navbar-dark.sticky-top {
 }
 
 .alert-danger {
-    color: #b5b5b5;
-    background-color: #f1f1f1;
+    color: #0581cb;
+    background-color: #ff59003b;
     border-color: #585858;
 }
 
@@ -47,19 +62,26 @@ nav.navbar.navbar-expand-md.bg-primary.navbar-dark.sticky-top {
 }
 
 .alert-warning {
-    color: #f1f1f1;
-    background-color: #c1bcb7;
+    color: #6f5c5c;
+    background-color: #edf8ff;
     border-color: #ffeeba;
 }
 .col {
     margin-left: 3px;
+	flex-basis: unset;
 }
 
+#form_del_confirm button, #form_del_confirm a.btn.btn-danger {
+    border: 1px solid;
+    display: block;
+    /* max-width: min-content; */
+    margin-left: auto;
+    margin-right: auto;
+    width: 5rem;
+}
 
 div#mainNavbar {
-	
-    
-	
+		
 }
 
 .form-group {
@@ -72,7 +94,8 @@ div#mainNavbar {
 
 .col {
     -ms-flex-preferred-size: 0;
-flex-basis: unset;}
+/*flex-basis: unset;}*/
+}
 
 
 .alert {
@@ -97,10 +120,9 @@ flex-basis: unset;}
 form#form_resume h5 {
     display: block;
     width: 100%;
-    background: #82929a;
+    background: #e0e0e0; 
     /* line-height: 2em; */
     padding: 10px;
-	
 }
 
 .col.col-sm-8.text-center {
@@ -139,12 +161,14 @@ button, html [type=button] {
 .h5, h5 {
 	font-size: 1rem;
 }
-h5.res_section {
-    background-color: #95a3ab;
-    color: #fff;
+
+    h5.res_section {
+    background-color: #e2e9ec;
+    color: #000;
     padding: 10px;
     border-radius: 3px;
 }
+
 .bg-primary {
     background-color: #0581cb!important;
 }
@@ -167,18 +191,17 @@ h5.res_section {
 
 .text-muted {
     color: #797d82!important;
-    font-size: .7rem;
+    font-size: .8rem;
 }
 
 div#sex_div, div#birth_dt_div {
     display: inline-flex;
-    width: 16.7%!important;
+    width: 9em!important;
 }
 
 div#birth_place_div {
-	width: 66.6%!important;
+	width: 66.6%;
 	display: inline-flex;
-	
 }
 
 div#email_div {
@@ -215,9 +238,6 @@ div#citizenship_div {
 	font-size: .7rem;
 }
 
-
-
-
 label.radio-inline {
 font-weight: 400!important;
 	font-size: .8rem;
@@ -226,17 +246,10 @@ font-weight: 400!important;
 	text-align: center;
 }
 
-
-label.font-weight-bold {
+label{
     font-weight: 700!important;
     text-align: right;
-	font-size: smaller;
-	
-}
-
-label {
-    font-weight: 700!important;
-    
+    font-size: .9rem!important;
 }
 
 .alert {
@@ -245,7 +258,8 @@ label {
     margin-bottom: 1rem;
     border: none;
     border-radius: .25rem;
-    font-size: .8rem;
+    font-size: .9rem;
+	/*display: flex;*/
 }
 
 .form-control {
@@ -253,22 +267,22 @@ background-color: #f3f3f3;
 margin-bottom: 10px;
 }
 
-
 .btn-info {
     color: #fff;
     background-color: #0581cb;
     border-color: #0581cb;
+	max-height: 3rem;
 }
 
 .btn-primary {
-    color: #fff;
+    color: #fff!important;
     background-color: #0581cb;
     border-color: #0581cb;
 }
 
-
-
-
+.btn-success {
+     color: #fff!important;
+}
 
 button#btn_lang_add, button#btn_lang_remove {
     float: none;
@@ -279,21 +293,29 @@ button#btn_lang_add, button#btn_lang_remove {
 }
 
 /*PASS*/
-div#series_div, div#numb_div, div#dt_issue_div {
+
+div#series_div, div#numb_div {
 display: inline-flex;
-    width: 33.333%!important;
+    width: 25%!important;
+}
+
+div#dt_issue_div {
+display: inline-flex;
+    width: 25%!important;
 }
 
 div#unit_name_div {
 	display: inline-flex;
-    width: 66.6%!important;
 }
 div#unit_code_div {
 	display: inline-flex;
-    width: 33.4%!important;
+    width: 25%!important;
 }
 
-/**RLADR**/
+div#doc_number_div, div#doc_date_div {
+    width: 50%!important;
+}
+
 
 div#region_reg_div, div#area_reg_div, div#city_reg_div, div#location_reg_div, div#street_reg_div{
     display: inline-flex;
@@ -318,18 +340,17 @@ div#region_res_div, div#area_res_div, div#city_res_div, div#location_res_div, di
 
 .col.col-sm-3 {
     display: inline-flex;
-    }
-
+ }
 
 .btn-warning, .btn-success, .btn-info, .btn-danger, .btn-primary {
-	color: #fff;
+	color: #fff!important;
     background-color: #0581cb;
     border-color: #0581cb;
 }  
 .btn-warning:hover, .btn-success:hover, .btn-info:hover, .btn-danger:hover, .btn-primary:hover {
-background-color: #05629a;
+	background-color: #05629a;
     border-color: #0581cb;
-color: #fff;	
+	color: #fff;	
 }
 
 .btn-warning:active, .btn-success:active, .btn-info:active, .btn-danger:active, .btn-primary:active {
@@ -345,13 +366,10 @@ color: #fff;
 	box-shadow: 0 0 0 0.2rem rgb(5 129 203 / 79%)!important;
 } 
 
-
-
 p.font-weight-bold.font-italic {
     font-size: .8rem;
     line-height: .8rem;
 }
-
 
 /*scans*/
 
@@ -391,3 +409,399 @@ h2 {
     background-color: transparent;
     margin-top: 1rem;
 }
+
+
+div#points_div, div#discipline_div {
+    width: 50%!important;
+}
+   
+   
+form#form_docseduc div#educ_type_div, form#form_docseduc #doc_type_div {width: 50%!important;} 
+
+form#form_docseduc div#series_div, form#form_docseduc div#numb_div {width: 15%!important;} 
+
+
+div#educ_form_div, div#end_year_div {
+    width: 33.3%!important;
+}
+
+div#school_div {
+    width: 70%!important;
+}
+
+
+label {
+    width: 100%!important;
+    text-align: left!important;
+}
+
+#main_cont .row {
+    display: inline-block!important;
+    width: 100%!important;
+}
+
+div#main_cont .col {
+    display: inline-flex;
+}
+
+
+.tooltip-inner {
+    max-width: 200px;
+    padding: .25rem .5rem;
+    color: #fff;
+    text-align: center;
+    background-color: #44494e;
+    border-radius: .25rem;
+}
+
+.bs-tooltip-auto[x-placement^=right] .arrow::before, .bs-tooltip-right .arrow::before {
+    right: 0;
+    border-width: .4rem .4rem .4rem 0;
+    border-right-color: #44494e;
+}
+
+.butts {
+    display: flex;
+}
+
+.valid-feedback {
+    width: fit-content;
+    margin-top: .25rem;
+    font-size: 80%;
+    color: #3f4240;
+    background: #c2dec6;
+    padding: 5px;
+    border-radius: 3px!important;
+    margin: 5px;
+    border: 1px;
+}
+
+
+/*Adaptive*/
+
+@media(max-width: 736px)  {
+    h1{
+   	 font-size: 1rem!important;
+	
+   }
+   
+   .col-sm-2.text-left img {
+    width: 50px!important;
+    height: auto;
+    display: block;
+    margin: auto;
+}
+
+.col.col-sm-8.text-center {
+     font-size: 0.8rem!important;
+}
+
+.footer {
+    position: unset!important;
+}
+
+div#name_last_div, div#name_first_div, div#name_middle_div {
+    width: 100%!important;
+
+}
+div#email_div {
+
+    width: 100%!important;
+}
+
+div#birth_place_div {
+    width: 100!important;
+}
+
+
+div#phone_mobile_div, div#phone_home_div, div#phone_add_div, div#series_div, div#numb_div, div#region_reg_div, div#area_reg_div, div#city_reg_div, div#location_reg_div, div#street_reg_div, div#region_res_div, div#area_res_div, div#city_res_div, div#location_res_div, div#street_res_div, div#postcode_res_div, div#dt_issue_div, div#unit_name_div, div#unit_code_div, .form-check, button#btn_lang_add, button#btn_lang_remove, form#form_docseduc div#series_div, form#form_docseduc div#numb_div, div#school_div, div#educ_form_div,  div#end_year_div, form#form_docseduc div#educ_type_div, form#form_docseduc #doc_type_div   {
+    width: 100%!important;
+}
+ 
+.btn:not(:disabled):not(.disabled) {
+    margin-left: 10px!important;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    float: left;
+    min-width: 44%;
+}
+
+.col.col-sm-5.text-right.text-primary a {
+    font-size: .9rem;
+}
+
+.alert {
+   display: block;
+    position: relative;
+    clear: both;
+}
+
+
+ 
+}   
+
+
+@media
+	  only screen 
+    and (max-width: 760px), (min-device-width: 768px) 
+    and (max-device-width: 1024px)  {
+		
+		
+		
+
+		/* Force table to not be like tables anymore */
+		 thead, tbody, th, td, tr {
+			display: block;
+		}
+
+		/* Hide table headers (but not display: none;, for accessibility)*/ 
+		thead tr {
+			position: absolute;
+			top: -9999px;
+			left: -9999px;
+		}
+
+    tr {
+      margin: 0 0 1rem 0;
+    }
+      
+    tr:nth-child(odd) {
+      background: #ccc;
+    }
+    
+		td {
+			/* Behave  like a "row" */
+			border: none;
+			border-bottom: 1px solid #eee;
+			position: relative;
+			padding-left: 50%;
+		}
+
+		td:before {
+	position: absolute;
+    top: 0;
+    font-size: .7rem;
+    white-space: nowrap;
+    font-weight: 800;
+    color: #0581cb;
+    margin-bottom: .95rem;
+		}
+
+	#docs_educ td:nth-of-type(1):before { content: "№"; }
+	#docs_educ td:nth-of-type(2):before { content: "Вид образования"; }
+	#docs_educ td:nth-of-type(3):before { content: "Тип документа"; }
+	#docs_educ td:nth-of-type(4):before { content: "Серия"; }
+	#docs_educ td:nth-of-type(5):before { content: "Номер"; }
+	#docs_educ td:nth-of-type(6):before { content: "Дата выдачи"; }
+	#docs_educ td:nth-of-type(7):before { content: "Учебное заведение"; }
+	#docs_educ td:nth-of-type(8):before { content: "Год окончания"; }
+	
+	
+	
+	#ege td:nth-of-type(1):before { content: "№"; }
+	#ege td:nth-of-type(2):before { content: "Описание"; }
+	#ege td:nth-of-type(3):before { content: "Год сдачи"; }
+	
+	
+	#gridDb_priv_qoute1 td:nth-of-type(1):before { content: "№"; }
+	#gridDb_priv_qoute1 td:nth-of-type(2):before { content: "Тип"; }
+	#gridDb_priv_qoute1 td:nth-of-type(3):before { content: "Предмет"; }
+	#gridDb_priv_qoute1 td:nth-of-type(4):before { content: "Номер документа"; }
+	
+	#gridDb_priv_qoute td:nth-of-type(1):before { content: "Тип"; }
+	#gridDb_priv_qoute td:nth-of-type(2):before { content: "Номер документа"; }
+	#gridDb_priv_qoute td:nth-of-type(3):before { content: "Кем выдан"; }
+	
+	
+	#ind_achievs td:nth-of-type(1):before { content: "№"; }
+	#ind_achievs td:nth-of-type(2):before { content: "Индивидуальное достижение"; }
+	#ind_achievs td:nth-of-type(3):before { content: "Серия"; }
+	#ind_achievs td:nth-of-type(4):before { content: "Номер"; }
+	#ind_achievs td:nth-of-type(5):before { content: "Дата выдачи"; }
+	#ind_achievs td:nth-of-type(6):before { content: "Организация"; }
+	
+	
+
+}
+
+
+.invalid-feedback, p.text-danger {
+    color: #313131;
+    background: #fdd4d7!important;
+    border-radius: 3px;
+    padding: 3px;
+}
+
+
+.font-weight-bold {
+    font-weight: 500!important;
+    color: #4c5f6b;
+}
+
+.text-danger svg {
+    color: #4c5f6b!important;
+}
+
+.font-weight-bold path {
+    font-weight: 500!important;
+    color: #4c5f6b!important;
+}
+
+.alert-warning:before, .alert-primary:before{
+    font-family: Font Awesome\ 5 Free;
+    content: "\f0f3";
+    margin-right: 1rem;
+   }
+
+.alert-info:before {
+    font-family: Font Awesome\ 5 Free;
+    content: "\f05a";
+	font-weight: 800;
+    margin-right: 1rem;
+   }  
+  
+.alert-success:before {
+    font-family: Font Awesome\ 5 Free;
+    content: "\f164";
+    margin-right: 1rem;
+   }
+   
+ .alert-danger:before {
+    font-family: Font Awesome\ 5 Free;
+	font-weight: 800;
+    content: "\f05e";
+    margin-right: 1rem;
+	
+}
+
+.btn-success:before {
+    font-family: Font Awesome\ 5 Free;
+	font-weight: 800;
+    content: "\f00c";
+    margin-right: 1rem;
+}
+
+.btn-danger:before {
+    font-family: Font Awesome\ 5 Free;
+	font-weight: 800;
+    content: "\f00d";
+    margin-right: 1rem;
+}
+
+button#btn_save:before {
+	font-family: Font Awesome\ 5 Free;
+	font-weight: 800;
+    content: "\f0c7";
+    margin-right: 1rem;
+}
+
+
+.btn-warning:before {
+    font-family: Font Awesome\ 5 Free;
+	font-weight: 800;
+    content: "\f0e2";
+    margin-right: 1rem;
+	
+}
+
+.btn-info:before {
+    font-family: Font Awesome\ 5 Free;
+	font-weight: 800;
+    content: "\f059";
+    margin-right: 1rem;
+	
+}
+
+.btn-add:before {
+    font-family: Font Awesome\ 5 Free;
+	font-weight: 800;
+    content: "\f055"!important;
+    margin-right: 1rem;
+	
+}
+
+#btn_lang_add:before {
+	font-family: Font Awesome\ 5 Free;
+	font-weight: 800;
+    content: "\f055"!important;
+    margin-right: 1rem;
+}
+#btn_lang_remove:before {
+	font-family: Font Awesome\ 5 Free;
+	font-weight: 800;
+    content: "\f056"!important;
+    margin-right: 1rem;
+}
+
+
+h5.res_section:before {
+	font-family: Font Awesome\ 5 Free;
+	font-weight: 800;
+    content: "\f0c9"!important;
+    margin-right: 1rem;
+}
+
+
+.alert.alert-info:before {
+	font-family: Font Awesome\ 5 Free;
+	font-weight: 800;
+    content: "\f101"!important;
+    margin-right: 1rem;
+}
+
+
+
+.alert-success h5, .alert-info h5 {
+    min-height: 2rem;
+}
+#btn_lang_add, #btn_lang_remove {
+color: #fff!important;
+    background-color: #0581cb;
+    border-color: #0581cb;
+	}
+	
+	
+#btn_lang_add:hover, #btn_lang_remove:hover {
+    background-color: #05629a;
+    border-color: #0581cb;
+    color: #fff;
+}
+
+.table-bordered {border: none;}
+
+.table-bordered td, .table-bordered th {
+    border: 1px solid;
+	border-left: none;
+    background: #ffffff;
+    border-right: none;
+    border-color: #0581cb;
+	margin-bottom: -1px;
+}
+
+
+div#Make_app a:after {content: " Сформировать заявление о приеме в БелГУ";}
+div#Make_app a:before {
+	font-family: Font Awesome\ 5 Free;
+	font-weight: 800;
+    content: "\f56e"!important;
+    margin-right: 1rem;
+	font-size: 2.3rem;
+}
+
+div#Make_app svg.svg-inline--fa.fa-print.fa-w-16.fa-3x {
+	display: none;
+}	
+div#Make_app a {
+    display: block;
+    width: 100%;
+    position: relative;
+    text-decoration: none;
+    font-size: 1.2rem;
+    background: #0e344a;
+    color: #ffab56;
+    padding: 1.2rem;
+    margin: auto;
+    border-radius: 5px;
+    text-align: center;
+}
+div#Make_app a:hover {background: #085d90;}
